--- a/Front-end/argentbank-front/package.json
+++ b/Front-end/argentbank-front/package.json
@@ -24,7 +24,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -47,6 +49,8 @@
   "devDependencies": {
     "eslint": "^8.52.0",
     "eslint-plugin-react": "^7.33.2",
+    "gh-pages": "^6.0.0",
     "prettier": "^3.0.3"
-  }
+  },
+  "homepage": "https://thibaut18.github.io/ArgentBank-website"
 }
